made additional pages and minor changes. And i fixed the alignment issues with the sections

--- a/css/about.css
+++ b/css/about.css
@@ -62,7 +62,6 @@ header{
 .section-1{
     background-color: #000000;
     color: #fff;
-    border-top : 1px solid  #ffffffa9;
     height: fit-content;
 }
 .section-container{
@@ -148,7 +147,7 @@ section{
     margin: 0;
 }
 #Trusted-section{
-    background-color: #1C1B1B;
+    background-color: #0C0C0C;
     margin-top: 5px;
 
     display: grid;
@@ -166,5 +165,84 @@ section{
    background-color: #070707;
 }
 #after{
+    height: 300px;
+    color: #1151F4;
+    text-align: center;
+    padding: 40px  ;
+}
+#after h1{
+    color: #1151F4;
+    padding: 10px 1px;
+}
+#after h3{
+    color: #1151F4;
+    padding: 10px 1px;
+    text-align: right;
+}
+#ceo-section{
+    background-color: #000000;
+}
+#contact-image-2{
+    width: 100%;
+    background-size: cover;
+    background-image: url(../img/pexels-olly-3756679.jpg);
+    height:  calc(90vh - 100px);
+    background-position: center;
+}
+#contact-image-2-content{
+    color: #000000;
+    width: 80%;
+    font-size: 28px;
+    text-align: center;
+    margin: 0 auto;
+    height: 60px ;
+    line-height: 60px;
+    background-color: #074AF8 ;
+    border-bottom: 5px solid #000000;
+}
+
+#section-3{
+    background-color: #000000;
     height: 200px;
+    padding: 20px;
+    color: #fff;
+}
+
+#section-3-item{
+    background-color: #074AF8;
+    height: 100px;
+    margin : 2px auto 10px auto;
+    display: block;
+    font-size: xx-large;
+    text-align: center;
+    text-transform: capitalize;
+    line-height: 100px;
+}
+#section-3-item-2{
+    background-color: #074AF8;
+    height: 50px;
+    margin : 2px auto 10px auto;
+    display: block;
+    font-size: small;
+    text-align: center;
+    text-transform: capitalize;
+}
+#contact-image-3{
+    width: 100%;
+    background-size: cover;
+    background-image: url(../img/pexels-olly-3860819.jpg);
+    height:  calc(90vh - 100px);
+    background-position: center;
+}
+#contact-image-3-item{
+    width: 50%;
+    background-color: #074AF8;
+    color: #ffffff;
+    height: 50px;
+    line-height: 50px;
+    margin : 10px auto 20px auto;
+    display: block;
+    font-size: large;
+    text-align: center;
+    text-transform: capitalize;
 }
