--- a/css/style.css
+++ b/css/style.css
@@ -14,14 +14,10 @@
     }
 }
 header{
-    height: 100px;
+    height: 80px;
     background-color: #000000;
     width: 100%;
 }
-body{
-    background-color: rgba(255, 255, 255, 255);
-    margin: 0;
-    }
 a{
     text-decoration: none;
     color : #fff;
@@ -34,19 +30,21 @@ a{
     padding-top: 10px ;
 }
 #header-link {
-    display: block;
-    margin-top: 20px;
+    display: flex;
+    flex-wrap: nowrap;
     font-size: large;
     font-weight: 500;
     color: rgb(253, 253, 253);
     text-align: center;
+    width: 95%;
+    justify-content: space-evenly;
+    margin :  10px ;
 }
 #header-link a{
     font-size: large;
     font-weight: 500;
     font-family: 'Times New Roman', Times, serif;
     color: rgb(253, 253, 253);
-    margin: 10px ;
     padding-right: 5px ;
 }
 .header-hidden-content{
@@ -315,7 +313,7 @@ footer main {
         header{
             display: block;
             background-color: #000;
-            height: 120px;
+            height: 80px;
             padding-top: 10px ;
         }
         #logo a{
@@ -348,7 +346,7 @@ footer main {
         }  
          #logo a {
             color :rgb(13, 13, 13);
-            margin-left : -80px;
+            margin-left : 40px;
         }
         #header-link a {
             color :rgb(13, 13, 13);   
@@ -374,7 +372,7 @@ footer main {
         background-color: white ;
         color :  rgb(236, 232, 232); 
         border-radius: 8px ;
-        height: 40px ;
+        height: 50px ;
         font-size: larger;
     }
 }
@@ -399,8 +397,7 @@ footer main {
         padding-top: 0;
         text-align: center;
         color: #141313;
-        margin-left: 120px;
-
+        margin-left: 20px;
     }
 #header-link {
     font-size: x-large;
